--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -6,7 +6,7 @@ jobs:
     name: Ensuro Tests
     runs-on: ubuntu-latest
     container:
-      image: gnarvaja/eth-dev:ensuro-1.0.6
+      image: us-docker.pkg.dev/solid-range-319205/ensuro-public/eth-dev:20220722
     timeout-minutes: 30
 
     steps:
