--- a/.github/workflows/build-base-image.yaml
+++ b/.github/workflows/build-base-image.yaml
@@ -14,7 +14,7 @@ jobs:
 
     steps:
       - name: Build and push
-        uses: ensuro/github-actions/build-docker@feature-schedule-tag
+        uses: ensuro/github-actions/build-docker@main
         with:
           image: "solid-range-319205/ensuro-public/eth-dev"
           google_credentials: "${{ secrets.GOOGLE_CREDENTIALS }}"
