--- a/docker-compose.override.dev.yml
+++ b/docker-compose.override.dev.yml
@@ -8,4 +8,4 @@ services:
         DEV_ENV: "1"
         # BASE_CONTAINER: "minimal-notebook-pypy:latest"
     volumes:
-      - ./:/code
+      - ./:/home/ensuro/code
