--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -5,14 +5,18 @@ jobs:
   tests:
     name: Ensuro Tests
     runs-on: ubuntu-latest
-    container:
-      image: us-docker.pkg.dev/solid-range-319205/ensuro-public/eth-dev:20220801
     timeout-minutes: 30
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "16"
+          cache: "npm"
       - run: npm install
+      - run: pip install -r /requirements.txt
+      - run: pip install -r /requirements-dev.txt
       - run: npx hardhat compile
       - run: npx hardhat size-contracts
       - run: npm run solhint
