--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -5,20 +5,24 @@ jobs:
   tests:
     name: Ensuro Tests
     runs-on: ubuntu-latest
-    container:
-      image: us-docker.pkg.dev/solid-range-319205/ensuro-public/eth-dev:20220722
     timeout-minutes: 30
 
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "16"
+          cache: "npm"
       - run: npm install
+      - run: pip install -r requirements.txt
+      - run: pip install -r requirements-dev.txt
       - run: npx hardhat compile
       - run: npx hardhat size-contracts
       - run: npm run solhint
       - run: brownie test -v --gas
-      - run: ./deploySmokeTest.sh
-      - run: ./deploySmokeTest-fork.sh
+      - run: scripts/deploySmokeTest.sh
+      - run: scripts/deploySmokeTest-fork.sh
         env:
           ALCHEMY_URL: ${{ secrets.ALCHEMY_URL }}
       - run: npx hardhat test
