--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ async-timeout==4.0.2
     # via
     #   aiohttp
     #   eth-brownie
-attrs==21.4.0
+attrs==22.1.0
     # via
     #   aiohttp
     #   eth-brownie
@@ -31,17 +31,17 @@ base58==2.1.1
     # via
     #   eth-brownie
     #   multiaddr
-bitarray==1.2.2
+bitarray==2.6.0
     # via
     #   eth-account
     #   eth-brownie
-black==22.3.0
+black==22.6.0
     # via eth-brownie
-certifi==2022.5.18.1
+certifi==2022.6.15
     # via
     #   eth-brownie
     #   requests
-charset-normalizer==2.0.12
+charset-normalizer==2.1.0
     # via
     #   aiohttp
     #   eth-brownie
@@ -50,7 +50,7 @@ click==8.1.3
     # via
     #   black
     #   eth-brownie
-cytoolz==0.11.2
+cytoolz==0.12.0
     # via
     #   eth-brownie
     #   eth-keyfile
@@ -65,24 +65,24 @@ environs==9.5.0
     # via
     #   -r requirements.in
     #   eth-prototype
-eth-abi==2.1.1
+eth-abi==2.2.0
     # via
     #   eip712
     #   eth-account
     #   eth-brownie
     #   eth-event
     #   web3
-eth-account==0.5.7
+eth-account==0.5.9
     # via
     #   eth-brownie
     #   web3
-eth-brownie==1.19.0
+eth-brownie==1.19.1
     # via
     #   -r requirements.in
     #   eth-prototype
 eth-event==1.2.3
     # via eth-brownie
-eth-hash[pycryptodome]==0.3.2
+eth-hash[pycryptodome]==0.3.3
     # via
     #   eth-brownie
     #   eth-event
@@ -97,12 +97,13 @@ eth-keys==0.3.4
     #   eth-account
     #   eth-brownie
     #   eth-keyfile
-eth-prototype[brownie]==0.7.1
+eth-prototype[brownie]==0.7.2
     # via -r requirements.in
 eth-rlp==0.2.1
     # via
     #   eth-account
     #   eth-brownie
+    #   web3
 eth-typing==2.3.0
     # via
     #   eip712
@@ -127,7 +128,7 @@ execnet==1.9.0
     # via
     #   eth-brownie
     #   pytest-xdist
-frozenlist==1.3.0
+frozenlist==1.3.1
     # via
     #   aiohttp
     #   aiosignal
@@ -171,7 +172,7 @@ jsonschema==3.2.0
     #   web3
 lazy-object-proxy==1.7.1
     # via eth-brownie
-lru-dict==1.1.7
+lru-dict==1.1.8
     # via
     #   eth-brownie
     #   web3
@@ -223,7 +224,7 @@ pluggy==1.0.0
     # via
     #   eth-brownie
     #   pytest
-prompt-toolkit==3.0.29
+prompt-toolkit==3.0.30
     # via eth-brownie
 protobuf==3.20.1
     # via
@@ -240,7 +241,7 @@ py-solc-ast==1.2.9
     # via eth-brownie
 py-solc-x==1.1.1
     # via eth-brownie
-pycryptodome==3.14.1
+pycryptodome==3.15.0
     # via
     #   eip712
     #   eth-brownie
@@ -291,7 +292,7 @@ pyyaml==5.4.1
     # via
     #   -r requirements.in
     #   eth-brownie
-requests==2.27.1
+requests==2.28.1
     # via
     #   eth-brownie
     #   eth-prototype
@@ -332,7 +333,7 @@ tomli==2.0.1
     # via
     #   black
     #   eth-brownie
-toolz==0.11.2
+toolz==0.12.0
     # via
     #   cytoolz
     #   eth-brownie
@@ -340,7 +341,7 @@ tqdm==4.64.0
     # via eth-brownie
 typing-extensions==4.3.0
     # via black
-urllib3==1.26.9
+urllib3==1.26.11
     # via
     #   eth-brownie
     #   requests
@@ -350,13 +351,13 @@ varint==1.0.2
     #   multiaddr
 vvm==0.1.0
     # via eth-brownie
-vyper==0.3.3
+vyper==0.3.6
     # via eth-brownie
 wcwidth==0.2.5
     # via
     #   eth-brownie
     #   prompt-toolkit
-web3==5.29.1
+web3==5.30.0
     # via eth-brownie
 websockets==9.1
     # via
@@ -368,7 +369,7 @@ wheel==0.37.1
     #   vyper
 wrapt==1.14.1
     # via eth-brownie
-yarl==1.7.2
+yarl==1.8.1
     # via
     #   aiohttp
     #   eth-brownie
