--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "0.0.5",
-    "solidity-coverage": "^0.7.20"
+    "solidity-coverage": "^0.7.20",
+    "solidity-docgen": "^0.6.0-beta.22"
   },
   "dependencies": {
     "@chainlink/contracts": "^0.2.2",
