--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -17,7 +17,9 @@ certifi==2022.6.15
 charset-normalizer==2.1.0
     # via requests
 click==8.1.3
-    # via pip-tools
+    # via
+    #   mkdocs
+    #   pip-tools
 colorama==0.4.5
     # via -r requirements-dev.in
 coverage[toml]==6.4.3
@@ -28,8 +30,14 @@ decorator==5.1.1
     #   ipython
 executing==0.9.1
     # via stack-data
+ghp-import==2.1.0
+    # via mkdocs
 idna==3.3
     # via requests
+importlib-metadata==4.12.0
+    # via
+    #   markdown
+    #   mkdocs
 iniconfig==1.1.1
     # via pytest
 ipdb==0.13.9
@@ -40,11 +48,22 @@ ipython==8.4.0
     #   ipdb
 jedi==0.18.1
     # via ipython
+jinja2==3.1.2
+    # via mkdocs
+markdown==3.3.7
+    # via mkdocs
+markupsafe==2.1.1
+    # via jinja2
 matplotlib-inline==0.1.3
     # via ipython
+mergedeep==1.3.4
+    # via mkdocs
+mkdocs==1.3.1
+    # via -r requirements-dev.in
 packaging==21.3
     # via
     #   build
+    #   mkdocs
     #   pytest
 parso==0.8.3
     # via jedi
@@ -79,6 +98,14 @@ pytest-cov==3.0.0
     # via -r requirements-dev.in
 pytest-timeout==2.1.0
     # via -r requirements-dev.in
+python-dateutil==2.8.2
+    # via ghp-import
+pyyaml==6.0
+    # via
+    #   mkdocs
+    #   pyyaml-env-tag
+pyyaml-env-tag==0.1
+    # via mkdocs
 requests==2.28.1
     # via responses
 responses==0.21.0
@@ -86,7 +113,9 @@ responses==0.21.0
 rpdb==0.1.6
     # via -r requirements-dev.in
 six==1.16.0
-    # via asttokens
+    # via
+    #   asttokens
+    #   python-dateutil
 stack-data==0.3.0
     # via ipython
 toml==0.10.2
@@ -105,10 +134,14 @@ urllib3==1.26.11
     # via
     #   requests
     #   responses
+watchdog==2.1.9
+    # via mkdocs
 wcwidth==0.2.5
     # via prompt-toolkit
 wheel==0.37.1
     # via pip-tools
+zipp==3.8.1
+    # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
 # pip
