--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.2.0",
   "description": "Ensuro - Decentralized insurance protocol",
   "scripts": {
-    "prettier": "prettier --write 'contracts/**/*.sol' 'interfaces/**/*.sol'",
-    "solhint": "solhint 'contracts/**/*.sol' 'interfaces/**/*.sol'"
+    "prettier": "prettier --write 'contracts/**/*.sol'",
+    "solhint": "solhint 'contracts/**/*.sol'"
   },
   "author": "",
   "license": "Apache-2.0",
