--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@ venv/
 docs/
 site/
 .addresses.json
+
+instrumented/contracts
+instrumented/build
+instrumented/interfaces
+instrumented/node_modules
+instrumented/scripts
