--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.4",
     "ethers": "~5.5.4",
+    "ganache-cli": "^6.12.2",
     "hardhat": "^2.9.3",
     "hardhat-contract-sizer": "^2.5.1",
     "hardhat-gas-reporter": "^1.0.8",
