Take out PriceRiskModule and remove Exchange
PriceRiskModule will be moved to a separated repository. We will do the
same with other RiskModule implementations.

Also, I'm removing the Exchange component. It was a mistake including a
component like that.

--- a/npm-package/package.json
+++ b/npm-package/package.json
@@ -1,12 +1,12 @@
 {
   "name": "@ensuro/core",
   "description": "Ensuro - Decentralized insurance protocol",
-  "version": "1.2.7",
+  "version": "2.0.0-beta1",
   "files": [
     "**/*.sol",
     "/build/contracts/*.json",
     "/build/interfaces/*.json",
-    "!/mocks/**/*"
+    "/js/*.js"
   ],
   "repository": {
     "type": "git",
