--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,19 +2,20 @@
 # Read the Docs configuration file
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 
-# Required
 version: 2
 
 # Set the version of Python and other tools you might need
-# build:
-#   os: ubuntu-22.04
-#   tools:
-#     python: "3.10"
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.10"
+  jobs:
+    pre_build:
+      - echo "pre build hook"
 
 mkdocs:
   configuration: mkdocs.yml
-
-# Optionally declare the Python requirements required to build your docs
-python:
-  install:
-    - requirements: docs/requirements.txt
+# # Optionally declare the Python requirements required to build your docs
+# python:
+#   install:
+#     - requirements: docs/requirements.txt
