--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "0.0.5",
     "solidity-coverage": "^0.7.20",
-    "solidity-docgen": "^0.6.0-beta.22"
+    "solidity-docgen": "^0.6.0-beta.22",
+    "lcov-badge2": "^1.0.3"
   },
   "dependencies": {
     "@chainlink/contracts": "^0.2.2",
