--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,4 +1,4 @@
-name: Ensuro SmartContract Tests
+name: Tests
 on: [push]
 
 jobs:
@@ -14,7 +14,7 @@ jobs:
         with:
           node-version: "16"
           cache: "npm"
-      - run: npm install
+      - run: npm ci
       - run: pip install -r requirements.txt
       - run: pip install -r requirements-dev.txt
       - run: npx hardhat compile
@@ -29,3 +29,17 @@ jobs:
         env:
           ALCHEMY_URL: ${{ secrets.ALCHEMY_URL }}
       - run: node instrumented/coverage.js
+      - name: Create coverage badge
+        run: |
+          set -x
+          COVERAGE_BADGE=badges/coverage.svg
+          mkdir -p badges
+          npx lcov-badge2 -o $COVERAGE_BADGE coverage/lcov.info
+          git config --global user.name 'Tests workflow'
+          git config --global user.email 'ensuro@users.noreply.github.com'
+
+          git add $COVERAGE_BADGE
+          if ! git diff HEAD -s --exit-code $COVERAGE_BADGE; then
+            git commit -m "Add coverage badge" $COVERAGE_BADGE && \
+            git push;
+          fi
