--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -24,5 +24,5 @@ jobs:
       - run: scripts/make-npm-package.sh ./build/npm-package
       - run: npm publish
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_AUTOMATION_TOKEN }}
+          NPM_TOKEN: ${{ secrets.NPM_AUTOMATION_TOKEN }}
         working-directory: ./build/npm-package
