--- a/npm-package/package.json
+++ b/npm-package/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@ensuro/core",
   "description": "Ensuro - Decentralized insurance protocol",
-  "version": "2.0.0-beta2",
+  "version": "%%VERSION%%",
   "files": [
     "**/*.sol",
     "/build/contracts/*.json",
