--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
     "@nomiclabs/hardhat-ethers": "^2.0.5",
     "@nomiclabs/hardhat-etherscan": "^3.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
@@ -17,16 +18,16 @@
     "ethereum-waffle": "^3.4.4",
     "ethers": "~5.5.4",
     "ganache-cli": "^6.12.2",
-    "hardhat": "^2.9.3",
+    "hardhat": "^2.11.1",
     "hardhat-contract-sizer": "^2.5.1",
     "hardhat-gas-reporter": "^1.0.8",
+    "lcov-badge2": "^1.0.3",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "0.0.5",
     "solidity-coverage": "^0.7.20",
-    "solidity-docgen": "^0.6.0-beta.22",
-    "lcov-badge2": "^1.0.3"
+    "solidity-docgen": "^0.6.0-beta.22"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
