--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "0.0.5",
     "solidity-coverage": "^0.7.20",
-    "solidity-docgen": "^0.6.0-beta.22"
+    "solidity-docgen": "^0.6.0-beta.22",
+    "hardhat-tracer": "^1.1.0-rc.9"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
