Update github workflow to use the plugin

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -28,7 +28,7 @@ jobs:
       - run: npx hardhat test
         env:
           ALCHEMY_URL: ${{ secrets.ALCHEMY_URL }}
-      - run: node instrumented/coverage.js
+      - run: npx hardhat brownie-coverage
       - name: Create coverage badge
         if: github.ref == 'refs/heads/main'
         run: |
