--- a/package.json
+++ b/package.json
@@ -21,14 +21,15 @@
     "hardhat": "^2.11.1",
     "hardhat-contract-sizer": "^2.5.1",
     "hardhat-gas-reporter": "^1.0.8",
+    "hardhat-tracer": "^1.1.0-rc.9",
     "lcov-badge2": "^1.0.3",
+    "mocha": "^10.0.0",
     "prettier": "^2.6.2",
     "prettier-plugin-solidity": "^1.0.0-beta.19",
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "0.0.5",
     "solidity-coverage": "^0.8.2",
-    "solidity-docgen": "^0.6.0-beta.22",
-    "hardhat-tracer": "^1.1.0-rc.9"
+    "solidity-docgen": "^0.6.0-beta.22"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.7.3",
