Endpoints for calling risk modules on-chain
Added new endpoints that return the PolicyData struct, needed for
resolving the policies. The existing endpoints were returning just the
id, so an on-chain contract creating policies wasn't going to have the
PolicyData struct required for later triggering the policy.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
     - Reserve: Reserve.md
   - Extensions:
     - TrustfulRiskModule: TrustfulRiskModule.md
+    - SignedQuoteRiskModule: SignedQuoteRiskModule.md
     - LPManualWhitelist: LPManualWhitelist.md
     - LiquidityThresholdAssetManager: LiquidityThresholdAssetManager.md
     - ERC4626AssetManager: ERC4626AssetManager.md
