--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.0",
   "description": "Ensuro - Decentralized insurance protocol",
   "scripts": {
-    "prettier": "prettier --write 'contracts/**/*.sol' --write 'test/**/*.js'",
+    "prettier": "prettier --write 'contracts/**/*.sol' --write 'test/**/*.js' --write 'tasks/**/*.js'",
     "solhint": "solhint 'contracts/**/*.sol'"
   },
   "author": "",
