--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,97 +4,95 @@
 #
 #    pip-compile requirements-dev.in
 #
-asttokens==2.0.7
+asttokens==2.2.1
     # via stack-data
-attrs==22.1.0
+attrs==22.2.0
     # via pytest
 backcall==0.2.0
     # via ipython
-build==0.8.0
+build==0.10.0
     # via pip-tools
-certifi==2022.6.15
+certifi==2022.12.7
     # via requests
-charset-normalizer==2.1.0
+charset-normalizer==3.0.1
     # via requests
 click==8.1.3
     # via
     #   mkdocs
     #   pip-tools
-colorama==0.4.5
+colorama==0.4.6
     # via -r requirements-dev.in
-coverage[toml]==6.4.3
+coverage[toml]==7.2.1
     # via pytest-cov
 decorator==5.1.1
     # via
     #   ipdb
     #   ipython
-executing==0.9.1
+exceptiongroup==1.1.0
+    # via pytest
+executing==1.2.0
     # via stack-data
 ghp-import==2.1.0
     # via mkdocs
-idna==3.3
+idna==3.4
     # via requests
-importlib-metadata==4.12.0
+importlib-metadata==6.0.0
     # via
     #   markdown
     #   mkdocs
-iniconfig==1.1.1
+iniconfig==2.0.0
     # via pytest
-ipdb==0.13.9
+ipdb==0.13.11
     # via -r requirements-dev.in
-ipython==8.4.0
+ipython==8.11.0
     # via
     #   -r requirements-dev.in
     #   ipdb
-jedi==0.18.1
+jedi==0.18.2
     # via ipython
 jinja2==3.1.2
     # via mkdocs
 markdown==3.3.7
     # via mkdocs
-markupsafe==2.1.1
+markupsafe==2.1.2
     # via jinja2
-matplotlib-inline==0.1.3
+matplotlib-inline==0.1.6
     # via ipython
 mergedeep==1.3.4
     # via mkdocs
-mkdocs==1.3.1
+mkdocs==1.4.2
     # via -r requirements-dev.in
-packaging==21.3
+packaging==23.0
     # via
     #   build
     #   mkdocs
     #   pytest
 parso==0.8.3
     # via jedi
-pep517==0.13.0
-    # via build
 pexpect==4.8.0
     # via ipython
 pickleshare==0.7.5
     # via ipython
-pip-tools==6.8.0
+pip-tools==6.12.3
     # via -r requirements-dev.in
 pluggy==1.0.0
     # via pytest
-prompt-toolkit==3.0.30
+prompt-toolkit==3.0.38
     # via ipython
 ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.2
     # via stack-data
-py==1.11.0
-    # via pytest
-pygments==2.12.0
+pygments==2.14.0
     # via ipython
-pyparsing==3.0.9
-    # via packaging
-pytest==7.1.2
+pyproject-hooks==1.0.0
+    # via build
+pytest==7.2.1
     # via
     #   -r requirements-dev.in
     #   pytest-cov
     #   pytest-timeout
-pytest-cov==3.0.0
+pytest-cov==4.0.0
     # via -r requirements-dev.in
 pytest-timeout==2.1.0
     # via -r requirements-dev.in
@@ -106,9 +104,9 @@ pyyaml==6.0
     #   pyyaml-env-tag
 pyyaml-env-tag==0.1
     # via mkdocs
-requests==2.28.1
+requests==2.28.2
     # via responses
-responses==0.21.0
+responses==0.22.0
     # via -r requirements-dev.in
 rpdb==0.1.6
     # via -r requirements-dev.in
@@ -116,31 +114,34 @@ six==1.16.0
     # via
     #   asttokens
     #   python-dateutil
-stack-data==0.3.0
+stack-data==0.6.2
     # via ipython
 toml==0.10.2
-    # via ipdb
+    # via responses
 tomli==2.0.1
     # via
     #   build
     #   coverage
-    #   pep517
+    #   ipdb
+    #   pyproject-hooks
     #   pytest
-traitlets==5.3.0
+traitlets==5.9.0
     # via
     #   ipython
     #   matplotlib-inline
-urllib3==1.26.11
+types-toml==0.10.8.5
+    # via responses
+urllib3==1.26.14
     # via
     #   requests
     #   responses
-watchdog==2.1.9
+watchdog==2.3.1
     # via mkdocs
-wcwidth==0.2.5
+wcwidth==0.2.6
     # via prompt-toolkit
-wheel==0.37.1
+wheel==0.38.4
     # via pip-tools
-zipp==3.8.1
+zipp==3.15.0
     # via importlib-metadata
 
 # The following packages are considered to be unsafe in a requirements file:
