--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    pip-compile requirements.in
 #
-aiohttp==3.8.1
+aiohttp==3.8.3
     # via
     #   eth-brownie
     #   web3
@@ -35,13 +35,13 @@ bitarray==2.6.0
     # via
     #   eth-account
     #   eth-brownie
-black==22.6.0
+black==22.10.0
     # via eth-brownie
-certifi==2022.6.15
+certifi==2022.9.24
     # via
     #   eth-brownie
     #   requests
-charset-normalizer==2.1.0
+charset-normalizer==2.1.1
     # via
     #   aiohttp
     #   eth-brownie
@@ -76,7 +76,7 @@ eth-account==0.5.9
     # via
     #   eth-brownie
     #   web3
-eth-brownie==1.19.1
+eth-brownie==1.19.3
     # via
     #   -r requirements.in
     #   eth-prototype
@@ -133,11 +133,11 @@ frozenlist==1.3.1
     #   aiohttp
     #   aiosignal
     #   eth-brownie
-future==0.18.2
+future==0.18.3
     # via m9g
 future-fstrings==1.2.0
     # via m9g
-hexbytes==0.2.2
+hexbytes==0.2.3
     # via
     #   eip712
     #   eth-account
@@ -147,7 +147,7 @@ hexbytes==0.2.2
     #   web3
 hypothesis==6.27.3
     # via eth-brownie
-idna==3.3
+idna==3.4
     # via
     #   eth-brownie
     #   requests
@@ -180,7 +180,7 @@ m9g==0.0.6
     # via
     #   -r requirements.in
     #   eth-prototype
-marshmallow==3.17.0
+marshmallow==3.19.0
     # via environs
 multiaddr==0.0.9
     # via
@@ -212,7 +212,7 @@ parsimonious==0.8.1
     # via
     #   eth-abi
     #   eth-brownie
-pathspec==0.9.0
+pathspec==0.10.1
     # via
     #   black
     #   eth-brownie
@@ -224,13 +224,13 @@ pluggy==1.0.0
     # via
     #   eth-brownie
     #   pytest
-prompt-toolkit==3.0.30
+prompt-toolkit==3.0.31
     # via eth-brownie
-protobuf==3.20.1
+protobuf==3.19.5
     # via
     #   eth-brownie
     #   web3
-psutil==5.9.1
+psutil==5.9.2
     # via eth-brownie
 py==1.11.0
     # via
@@ -248,7 +248,7 @@ pycryptodome==3.15.0
     #   eth-hash
     #   eth-keyfile
     #   vyper
-pygments==2.12.0
+pygments==2.13.0
     # via
     #   eth-brownie
     #   pygments-lexer-solidity
@@ -306,7 +306,7 @@ rlp==2.0.1
     #   eth-account
     #   eth-brownie
     #   eth-rlp
-semantic-version==2.8.5
+semantic-version==2.10.0
     # via
     #   eth-brownie
     #   py-solc-x
@@ -337,11 +337,13 @@ toolz==0.12.0
     # via
     #   cytoolz
     #   eth-brownie
-tqdm==4.64.0
+tqdm==4.64.1
     # via eth-brownie
-typing-extensions==4.3.0
-    # via black
-urllib3==1.26.11
+typing-extensions==4.4.0
+    # via
+    #   black
+    #   eth-brownie
+urllib3==1.26.12
     # via
     #   eth-brownie
     #   requests
@@ -351,13 +353,13 @@ varint==1.0.2
     #   multiaddr
 vvm==0.1.0
     # via eth-brownie
-vyper==0.3.6
+vyper==0.3.7
     # via eth-brownie
 wcwidth==0.2.5
     # via
     #   eth-brownie
     #   prompt-toolkit
-web3==5.30.0
+web3==5.31.3
     # via eth-brownie
 websockets==9.1
     # via
