Implementation of expirePolicies in the prototype
Also added to the wrappers file.

Also tests and removed external risk modules from deploy file.

--- a/.github/workflows/npm.yaml
+++ b/.github/workflows/npm.yaml
@@ -59,5 +59,6 @@ jobs:
               RELEASE_TAG=latest
             fi
           fi
+          echo "RELEASE_TAG: $RELEASE_TAG / SEMVER: $SEMVER"
           npm publish --tag "$RELEASE_TAG"
         working-directory: ./build/npm-package
