Fix DeinvestAll Bug
When unplugging an Asset Manager it was leaving the lastInvestmentValue
with a wrong value. Then when a new Asset Manager is plugged, it reuses
the same storage and assumes the lastInvestmentValue is different than
the real value.

--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -6,5 +6,6 @@ compiler:
       runs: 200
     remappings:
       - "@openzeppelin=node_modules/@openzeppelin"
+      - "hardhat=node_modules/hardhat"
 networks:
   default: hardhat
