Refactor utils and test utils into separate modules.
The main reason for these changes is to reduce duplication across utils
and avoid issues when trying to use the utils in hh tasks or config.

The new modules are:

- `js/utils.js`: holds general utilities. Utilities that require the
              hardhat runtime environment receive it as a parameter,
              leaving it up to the caller to set it up as necessary.
              This module can be safely imported from hh config.
- `js/test-utils.js`: holds utilities that are specific for testing. They
              usually perform actions on chain. These are not meant to
              be imported by hardhat tasks because the module imports
              the HRE at the top.
- `js/enums.js`: holds enums copied from the contracts. Some were
              brought from the deploy-scripts repo.
- `tasks/deploy.js`: remains as it was, with hardhat tasks and helpers
              for those tasks. This module can be safely imported from
              hh config, of course.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Ensuro - Decentralized insurance protocol",
   "scripts": {
     "prettier": "prettier --write 'contracts/**/*.sol' --write 'test/**/*.js' --write 'tasks/**/*.js'",
-    "solhint": "solhint 'contracts/**/*.sol'"
+    "solhint": "solhint 'contracts/**/*.sol'",
+    "test": "hardhat test"
   },
   "author": "",
   "license": "Apache-2.0",
@@ -15,6 +16,8 @@
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/hardhat-upgrades": "^1.28.0",
     "chai": "^4.3.6",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
     "ethereum-waffle": "^3.4.4",
     "ethers": "~5.7.1",
     "hardhat": "^2.11.2",
