--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,3 +38,8 @@ repos:
     rev: v8.12.0
     hooks:
       - id: gitleaks-docker
+
+  - repo: https://github.com/pre-commit/mirrors-eslint
+    rev: "v8.45.0"
+    hooks:
+      - id: eslint
