--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ethers": "~5.7.1",
     "hardhat": "^2.11.2",
     "hardhat-contract-sizer": "^2.6.1",
+    "hardhat-dependency-compiler": "^1.1.3",
     "hardhat-gas-reporter": "^1.0.9",
     "hardhat-tracer": "^1.1.0-rc.9",
     "lcov-badge2": "^1.0.3",
