--- a/package.json
+++ b/package.json
@@ -10,30 +10,28 @@
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^1.0.6",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.6",
-    "@nomiclabs/hardhat-ethers": "^2.1.1",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.4",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
-    "@openzeppelin/hardhat-upgrades": "^1.28.0",
-    "chai": "^4.3.6",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
-    "ethereum-waffle": "^3.4.4",
-    "ethers": "~5.7.1",
-    "hardhat": "^2.11.2",
-    "hardhat-contract-sizer": "^2.6.1",
+    "@openzeppelin/hardhat-upgrades": "^3.0.2",
+    "chai": "^4.2.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "ethereum-waffle": "^4.0.10",
+    "ethers": "~6.10.0",
+    "hardhat": "^2.19.5",
+    "hardhat-contract-sizer": "^2.10.0",
     "hardhat-dependency-compiler": "^1.1.3",
-    "hardhat-gas-reporter": "^1.0.9",
-    "hardhat-tracer": "^1.1.0-rc.9",
-    "lcov-badge2": "^1.0.3",
-    "mocha": "^10.0.0",
-    "prettier": "^2.7.1",
-    "prettier-plugin-solidity": "^1.0.0-beta.24",
-    "solhint": "^3.3.7",
-    "solhint-plugin-prettier": "0.0.5",
-    "solidity-coverage": "^0.8.2",
-    "solidity-docgen": "^0.6.0-beta.27"
+    "hardhat-gas-reporter": "^1.0.10",
+    "hardhat-tracer": "^2.7.0",
+    "lcov-badge2": "^1.1.2",
+    "mocha": "^10.2.0",
+    "prettier": "^3.2.4",
+    "prettier-plugin-solidity": "^1.3.1",
+    "solhint": "^4.1.1",
+    "solhint-plugin-prettier": "0.1.0",
+    "solidity-coverage": "^0.8.6",
+    "solidity-docgen": "^0.6.0-beta.36"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.2",
