--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -20,7 +20,7 @@ jobs:
       - run: npx hardhat compile
       - run: npx hardhat size-contracts
       - run: npm run solhint
-      - run: brownie test -v --gas
+      - run: pytest
       - run: scripts/deploySmokeTest.sh
       - run: scripts/deploySmokeTest-fork.sh
         env:
@@ -29,7 +29,7 @@ jobs:
         env:
           REPORT_GAS: "1"
           ALCHEMY_URL: ${{ secrets.ALCHEMY_URL }}
-      - run: npx hardhat brownie-coverage
+      - run: npx hardhat python-coverage
       - name: Create coverage badge
         if: github.ref == 'refs/heads/main'
         run: |
