--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -20,8 +20,9 @@ jobs:
       - run: npx hardhat compile
       - run: npx hardhat size-contracts
       - run: npm run solhint
-      - run: |
-          npx hardhat node &
+      - name: Run python tests
+        run: |
+          npx hardhat node > /dev/null &
           NODE_PID=$!
           pytest
           kill $NODE_PID
