--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,5 @@ testpaths = [
 filterwarnings = [
     # Disable MismatchedABI warnings for event parsing, they're not relevant for our tests
     'ignore:.*MismatchedABI\(The event signature did not match the provided ABI\).*',
+    'ignore:.*LogTopicError\(.*\). It has been discarded\..*',
 ]
