--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -26,7 +26,7 @@ jobs:
           NODE_PID=$!
           scripts/wait-node.sh http://localhost:8545
           pytest
-          kill $NODE_PID || true
+          kill -- -${NODE_PID} || true
           wait $NODE_PID || true
       - run: scripts/deploySmokeTest.sh
       - run: scripts/deploySmokeTest-fork.sh
