--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -36,11 +36,14 @@ jobs:
         env:
           REPORT_GAS: "1"
           ALCHEMY_URL: ${{ secrets.ALCHEMY_URL }}
-      - name: Coverage measurement
-        run: |
-          . scripts/utils.sh
-          killPID $(getHHNodePID) || true
-          npx hardhat python-coverage
+
+  coverage:
+    name: Full coverage measurement
+    runs-on: ubuntu-latest
+    timeout-minutes: 45
+
+    steps:
+      - run: npx hardhat python-coverage
       - name: Create coverage badge
         if: github.ref == 'refs/heads/main'
         run: |
