--- a/package.json
+++ b/package.json
@@ -12,17 +12,15 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.4",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
-    "@nomiclabs/hardhat-etherscan": "^3.1.0",
+    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@openzeppelin/hardhat-upgrades": "^3.0.2",
     "chai": "^4.2.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
-    "ethereum-waffle": "^4.0.10",
-    "ethers": "~6.10.0",
+    "ethers": "^6.11.1",
     "hardhat": "^2.19.5",
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-dependency-compiler": "^1.1.3",
-    "hardhat-gas-reporter": "^1.0.10",
     "hardhat-tracer": "^2.7.0",
     "lcov-badge2": "^1.1.2",
     "mocha": "^10.2.0",
@@ -30,7 +28,6 @@
     "prettier-plugin-solidity": "^1.3.1",
     "solhint": "^4.1.1",
     "solhint-plugin-prettier": "0.1.0",
-    "solidity-coverage": "^0.8.6",
     "solidity-docgen": "^0.6.0-beta.36"
   },
   "dependencies": {
