--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,5 +1,15 @@
 name: Tests
-on: [push]
+
+on:
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+  push:
+    branches:
+      - "main"
+  workflow_dispatch:
 
 jobs:
   tests:
