--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.4",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
-    "@nomicfoundation/hardhat-toolbox": "^4.0.0",
-    "@openzeppelin/hardhat-upgrades": "^3.0.2",
-    "chai": "^4.2.0",
-    "eslint": "^8.56.0",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@openzeppelin/hardhat-upgrades": "^3.7.0",
+    "chai": "^4.3.6",
+    "eslint": "^9.16.0",
     "eslint-config-prettier": "^9.1.0",
     "ethers": "^6.11.1",
-    "hardhat": "^2.19.5",
+    "hardhat": "^2.22.17",
     "hardhat-contract-sizer": "^2.10.0",
-    "hardhat-dependency-compiler": "^1.1.3",
-    "hardhat-tracer": "^2.7.0",
+    "hardhat-dependency-compiler": "^1.2.1",
+    "hardhat-tracer": "^3.0.0",
     "lcov-badge2": "^1.1.2",
     "mocha": "^10.2.0",
-    "prettier": "^3.2.4",
+    "prettier": "^3.4.2",
     "prettier-plugin-solidity": "^1.3.1",
-    "solhint": "^4.1.1",
-    "solhint-plugin-prettier": "0.1.0",
+    "solhint": "^5.0.4",
+    "solhint-plugin-prettier": "^0.1.0",
     "solidity-docgen": "^0.6.0-beta.36"
   },
   "dependencies": {
