--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "solidity-docgen": "^0.6.0-beta.36"
   },
   "dependencies": {
+    "@ensuro/utils": "^0.1.1",
     "@openzeppelin/contracts": "^4.9.2",
     "@openzeppelin/contracts-upgradeable": "^4.9.2"
   }
