--- a/package.json
+++ b/package.json
@@ -4,35 +4,29 @@
   "description": "Ensuro - Decentralized insurance protocol",
   "scripts": {
     "prettier": "prettier --write 'contracts/**/*.sol' --write 'test/**/*.js' --write 'tasks/**/*.js'",
-    "solhint": "solhint 'contracts/**/*.sol'",
+    "solhint": "solhint -w0 'contracts/**/*.sol'",
     "test": "hardhat test"
   },
   "author": "",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@nomicfoundation/hardhat-chai-matchers": "^2.0.4",
-    "@nomicfoundation/hardhat-network-helpers": "^1.0.10",
-    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
-    "@openzeppelin/hardhat-upgrades": "^3.7.0",
-    "chai": "^4.3.6",
-    "eslint": "^9.16.0",
-    "eslint-config-prettier": "^9.1.0",
-    "ethers": "^6.11.1",
-    "hardhat": "^2.22.17",
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@openzeppelin/hardhat-upgrades": "^3.9.1",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
+    "hardhat": "^2.26.2",
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-dependency-compiler": "^1.2.1",
-    "hardhat-tracer": "^3.0.0",
+    "hardhat-tracer": "^3.2.1",
     "lcov-badge2": "^1.1.2",
-    "mocha": "^10.2.0",
-    "prettier": "^3.4.2",
-    "prettier-plugin-solidity": "^1.3.1",
-    "solhint": "^5.0.4",
+    "prettier": "^3.6.2",
+    "solhint": "^6.0.0",
     "solhint-plugin-prettier": "^0.1.0",
     "solidity-docgen": "^0.6.0-beta.36"
   },
   "dependencies": {
-    "@ensuro/utils": "^0.1.1",
-    "@openzeppelin/contracts": "^4.9.2",
-    "@openzeppelin/contracts-upgradeable": "^4.9.2"
+    "@ensuro/utils": "^0.2.9",
+    "@openzeppelin/contracts": "^5.4.0",
+    "@openzeppelin/contracts-upgradeable": "^5.4.0"
   }
 }
