Migration to AccessManagedProxy for access control
- Removal of custom AccessManager contract.
- Removal of onlyRole and other decorators, since now the contracts will
  be deployed with AccessManagedProxy where all the methods are
  forbidden by default unless access controls explicitly skipped or
  enabled by the AccessManager (standard OZ 5.x) configuration.

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@ensuro/utils": "^0.2.9",
     "@openzeppelin/contracts": "^5.4.0",
-    "@openzeppelin/contracts-upgradeable": "^5.4.0"
+    "@openzeppelin/contracts-upgradeable": "^5.4.0",
+    "@ensuro/access-managed-proxy": "^0.2.0"
   }
 }
