--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -19,9 +19,7 @@ click==8.2.1
 colorama==0.4.6
     # via -r requirements-dev.in
 coverage[toml]==7.10.4
-    # via
-    #   coverage
-    #   pytest-cov
+    # via pytest-cov
 decorator==5.2.1
     # via
     #   ipdb
