--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,6 @@ eth-account==0.13.7
     # via web3
 eth-hash[pycryptodome]==0.7.1
     # via
-    #   eth-hash
     #   eth-utils
     #   web3
 eth-keyfile==0.8.1
@@ -45,10 +44,8 @@ eth-keys==0.7.0
     # via
     #   eth-account
     #   eth-keyfile
-eth-prototype[web3]==1.3.6
-    # via
-    #   -r requirements.in
-    #   eth-prototype
+eth-prototype[web3]==1.4.0
+    # via -r requirements.in
 eth-rlp==2.2.0
     # via eth-account
 eth-typing==5.2.1
