--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,4 +28,17 @@ nav:
   - Libraries:
     - Policy: Policy.md
     - ETKLib: ETKLib.md
-theme: readthedocs
+theme:
+  name: readthedocs
+  highlightjs: true
+  hljs_languages:
+    - solidity
+markdown_extensions:
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+      use_pygments: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
