--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,14 +31,16 @@ nav:
 theme:
   name: readthedocs
   highlightjs: true
-  hljs_languages:
-    - solidity
+  # hljs_languages:
+  #   - solidity  # not supported, generates a 404'd url
+extra_javascript:
+  - https://cdn.jsdelivr.net/npm/highlightjs-solidity@2.0.6/dist/solidity.min.js
 markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
       line_spans: __span
       pygments_lang_class: true
-      use_pygments: true
+      use_pygments: false
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - pymdownx.superfences
